# help-me-generate-1

./: Cargo.nix  Cargo.toml  flake.nix
src/: main.rs
