[package]
name = "help-me-generate-1"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "0.49.0"
aws-sdk-secretsmanager = "0.19.0"
aws-sdk-sns = "0.19.0"
aws_lambda_events = "0.7.0"
headers = "0.3.8"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"
lambda_runtime = "0.6.1"
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
